# matrix

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
cmake/: Coverage.cmake
modules/matrix/: CMakeLists.txt
modules/matrix/include/matrix/: Matrix.h  Matrix2DAdapter.h
scripts/: build-mingw5-x32-release.cmd  build-mingw5-x32.cmd  build-msvc15-x64-release.cmd  build-msvc15-x64.cmd  cmakegen-mingw5-x32-debug.cmd  cmakegen-msvc15-x64-debug.cmd
tests/: CMakeLists.txt  CatchInclude.h  MatrixTests.cpp
